--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
-# System and IDE files
-Thumbs.db
-.DS_Store
-.idea
-*.suo
-*.sublime-project
-*.sublime-workspace
-
-# Vendors
 node_modules/
-
-# Build
+dist/
 build/
-/npm-debug.log
+dev/
+.vscode/
+.idea
+*.log
+src_old
+*.old.js
+phaserTilemapfix
+*.zip
+legacy*
+dump/
+*.docx
+*.patch
+*.bak*
+*.old*
+higherVolume/
