--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": ">=3.1.11"
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
